--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -15,7 +15,7 @@
             </div>
          </div>
 
-         <h3>Contact Me</h3>
+        <h3 class="text-center py-8 font-bold">Contact Me</h3> 
 
          <form action="/todos" method="POST">
             <div class="parent-form">
